[gd_scene load_steps=2 format=2]

[ext_resource path="res://Gui/Struct/StructTransform2D.gd" type="Script" id=1]

[node name="StructTransform2D" type="GridContainer"]
anchor_right = 1.0
margin_bottom = 24.0
columns = 2
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="X1" type="SpinBox" parent="."]
margin_right = 510.0
margin_bottom = 24.0
size_flags_horizontal = 3
step = 0.0
allow_greater = true
allow_lesser = true
editable = false
prefix = "x1"

[node name="X2" type="SpinBox" parent="."]
margin_left = 514.0
margin_right = 1024.0
margin_bottom = 24.0
size_flags_horizontal = 3
step = 0.0
allow_greater = true
allow_lesser = true
editable = false
prefix = "x2"

[node name="Y1" type="SpinBox" parent="."]
margin_top = 28.0
margin_right = 510.0
margin_bottom = 52.0
size_flags_horizontal = 3
step = 0.0
allow_greater = true
allow_lesser = true
editable = false
prefix = "y1"

[node name="Y2" type="SpinBox" parent="."]
margin_left = 514.0
margin_top = 28.0
margin_right = 1024.0
margin_bottom = 52.0
size_flags_horizontal = 3
step = 0.0
allow_greater = true
allow_lesser = true
editable = false
prefix = "y2"

[node name="O1" type="SpinBox" parent="."]
margin_top = 56.0
margin_right = 510.0
margin_bottom = 80.0
size_flags_horizontal = 3
step = 0.0
allow_greater = true
allow_lesser = true
editable = false
prefix = "o1"

[node name="O2" type="SpinBox" parent="."]
margin_left = 514.0
margin_top = 56.0
margin_right = 1024.0
margin_bottom = 80.0
size_flags_horizontal = 3
step = 0.0
allow_greater = true
allow_lesser = true
editable = false
prefix = "o2"
[connection signal="value_changed" from="X1" to="." method="_on_X1_value_changed"]
[connection signal="value_changed" from="X2" to="." method="_on_X2_value_changed"]
[connection signal="value_changed" from="Y1" to="." method="_on_Y1_value_changed"]
[connection signal="value_changed" from="Y2" to="." method="_on_Y2_value_changed"]
[connection signal="value_changed" from="O1" to="." method="_on_O1_value_changed"]
[connection signal="value_changed" from="O2" to="." method="_on_O2_value_changed"]
